Updated mlflow credentials, readme

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ joblib = "^1.4.2"
 types-pyyaml = "^6.0.12.20240917"
 flask = "^3.0.3"
 flask-cors = "^5.0.0"
+python-dotenv = "^1.0.1"
 
 
 [tool.poetry.group.dev.dependencies]
