--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -19,6 +19,16 @@ jobs:
       - name: Checkout Code
         uses: actions/checkout@v3
 
+      # Install Python and isort, black, flake8, and other dependencies
+      - name: Set up Python and install dependencies
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.x'
+      - name: Install Python dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install isort black flake8
+
       - name: Lint code with isort
         run: isort .
 
