--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -35,8 +35,8 @@ jobs:
       - name: Lint code with black
         run: black .
 
-      - name: Lint code with flake8
-        run: flake8 .
+      # - name: Lint code with flake8
+      #   run: flake8 .
 
       - name: Run unit tests
         run: echo "Running unit tests"
