--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -143,15 +143,8 @@ jobs:
       - name: Run Integration Tests
         run: curl --fail http://localhost:8080/health || exit 1
 
-      - name: Stop and remove container if running
-        run: |
-          CONTAINER_ID=$(docker ps -q --filter "name=mlproj")
-          if [ ! -z "$CONTAINER_ID" ]; then
-            docker stop $CONTAINER_ID
-            docker rm -fv $CONTAINER_ID
-          else
-            echo "No container found to stop"
-          fi
+      - name: Stop and Remove Integration Test Container
+        run: docker stop mlproj-integration-tests && docker rm mlproj-integration-tests
 
       - name: Run Docker Image to serve users
         env:
