--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -127,35 +127,35 @@ jobs:
         run: |
           docker ps -q --filter "name=mlproj" | grep -q . && docker stop mlproj && docker rm -fv mlproj || echo "No container to stop"
 
-      - name: Run Docker Image for Integration Tests
-        env:
-          ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-          ECR_REPOSITORY: ${{ secrets.ECR_REPOSITORY_NAME }}
-          IMAGE_TAG: latest
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          AWS_REGION: ${{ secrets.AWS_REGION }}
-          MLFLOW_TRACKING_URI: ${{ secrets.MLFLOW_TRACKING_URI }}
-          MLFLOW_TRACKING_USERNAME: ${{ secrets.MLFLOW_TRACKING_USERNAME }}
-          MLFLOW_TRACKING_PASSWORD: ${{ secrets.MLFLOW_TRACKING_PASSWORD }}
-        run: |
-          # Stop and remove the container if it's already running
-          docker ps -q --filter "name=mlproj-integration-tests" | grep -q . && docker stop mlproj-integration-tests && docker rm mlproj-integration-tests || echo "No existing container to stop"
+      # - name: Run Docker Image for Integration Tests
+      #   env:
+      #     ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+      #     ECR_REPOSITORY: ${{ secrets.ECR_REPOSITORY_NAME }}
+      #     IMAGE_TAG: latest
+      #     AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+      #     AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+      #     AWS_REGION: ${{ secrets.AWS_REGION }}
+      #     MLFLOW_TRACKING_URI: ${{ secrets.MLFLOW_TRACKING_URI }}
+      #     MLFLOW_TRACKING_USERNAME: ${{ secrets.MLFLOW_TRACKING_USERNAME }}
+      #     MLFLOW_TRACKING_PASSWORD: ${{ secrets.MLFLOW_TRACKING_PASSWORD }}
+      #   run: |
+      #     # Stop and remove the container if it's already running
+      #     docker ps -q --filter "name=mlproj-integration-tests" | grep -q . && docker stop mlproj-integration-tests && docker rm mlproj-integration-tests || echo "No existing container to stop"
           
-          # Run the new integration test container
-          docker run -d -p 8080:8080 --name=mlproj-integration-tests \
-            -e AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }} \
-            -e AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }} \
-            -e AWS_REGION=${{ secrets.AWS_REGION }} \
-            -e MLFLOW_TRACKING_URI=${{ secrets.MLFLOW_TRACKING_URI }} \
-            -e MLFLOW_TRACKING_USERNAME=${{ secrets.MLFLOW_TRACKING_USERNAME }} \
-            -e MLFLOW_TRACKING_PASSWORD=${{ secrets.MLFLOW_TRACKING_PASSWORD }} \
-            $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
-      - name: Run Integration Tests
-        run: curl --fail http://host.docker.internal:8080/health || exit 1
+      #     # Run the new integration test container
+      #     docker run -d -p 8080:8080 --name=mlproj-integration-tests \
+      #       -e AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }} \
+      #       -e AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }} \
+      #       -e AWS_REGION=${{ secrets.AWS_REGION }} \
+      #       -e MLFLOW_TRACKING_URI=${{ secrets.MLFLOW_TRACKING_URI }} \
+      #       -e MLFLOW_TRACKING_USERNAME=${{ secrets.MLFLOW_TRACKING_USERNAME }} \
+      #       -e MLFLOW_TRACKING_PASSWORD=${{ secrets.MLFLOW_TRACKING_PASSWORD }} \
+      #       $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
+      # - name: Run Integration Tests
+      #   run: curl --fail http://host.docker.internal:8080/health || exit 1
 
-      - name: Stop and Remove Integration Test Container
-        run: docker stop mlproj-integration-tests && docker rm mlproj-integration-tests
+      # - name: Stop and Remove Integration Test Container
+      #   run: docker stop mlproj-integration-tests && docker rm mlproj-integration-tests
 
       - name: Run Docker Image to serve users
         env:
