Stop and remove any stopped or dangling containers

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -120,12 +120,16 @@ jobs:
         run: |
          docker pull $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
 
-      - name: List running containers
-        run: docker ps
-         
       - name: Stop and remove container if running
         run: |
+          # List all containers to check if 'mlproj' exists
+          docker ps -a
+
+          # Forcefully stop and remove the container if it's running
           docker ps -q --filter "name=mlproj" | grep -q . && docker stop mlproj && docker rm -fv mlproj || echo "No container to stop"
+
+          # Clean up any stopped or dangling containers
+          docker container prune -f || echo "No dangling containers to prune"
 
       # - name: Run Docker Image for Integration Tests
       #   env:
